# Mia

./: .gitignore  .gitlab-ci.yml  .mia-config.yaml  ARCHITECTURAL_SCHEMA.json  AUTO_FIX_TODOS.py  BRUTAL_REALITY_CHECK.md  BUSINESS_CONTINUITY.md  CLEANUP_SUMMARY.md  CODE_STATISTICS_REPORT.md  COMPLETE_TODO_AUDIT.py  COMPLEX_REASONING_TEST_RESULTS.json  COMPREHENSIVE_SYSTEM_ANALYSIS.md  COMPREHENSIVE_TEST_RESULTS.md  DOWNLOAD_INSTRUCTIONS.md  Dockerfile.deterministic  Dockerfile.enterprise  ENTERPRISE_FIXES_SUMMARY.md  EXECUTIVE_SUMMARY_FINAL.md  FINAL_100_PERCENT_COMPLETION.py  FINAL_COMPLETION_REPORT.json  FINAL_COMPLETION_REPORT.md  FINAL_COMPREHENSIVE_TEST_SUMMARY.json  FINAL_COMPREHENSIVE_TEST_SUMMARY.py  FINAL_IMPLEMENTATION_STATUS_SLOVENSKO.md  FINAL_STABILITY_CERTIFICATION_REPORT.md  FINAL_STATUS_REPORT.md  FORMAL_SEMANTIC_LAYER_SUMMARY.json  FORMAL_STABILITY_PROOFS.json  FUNCTIONALITY_PRESERVATION_PROOF.json  HONEST_ASSESSMENT.md  IMMEDIATE_FIX_SCRIPT.py  KONČNO_POROČILO_MIA_ENTERPRISE_AGI.md  KONČNO_POROČILO_PLATFORM_VERIFIKACIJE.md  MASTER_ARCHITECTURE_EXECUTIVE_SUMMARY.md  MASTER_ARCHITECTURE_REPORT.json  MASTER_SYSTEM_ARCHITECT.py  MATHEMATICAL_VERIFICATION_SUMMARY.json  MEGA_COMPREHENSIVE_TEST.py  MEGA_TEST_REPORT.json  MEGA_TEST_REPORT.md  (+205 more)
audit_reports/: audit_summary_1640995200.md  audit_summary_1765271833.md  audit_summary_1765272017.md  audit_summary_1765272078.md  audit_summary_1765272112.md  (+13 more)
mia/data/project_builder/templates/rust_actix/: Cargo.toml  Dockerfile  template.json
mia/data/project_builder/templates/rust_actix/src/: main.rs
(+645 files in other folders)
