[package]
name = "{{project_name}}"
version = "1.0.0"
edition = "2021"
description = "{{description}}"
authors = ["{{author}} <{{email}}>"]

[dependencies]
actix-web = "4.4"
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"

[dev-dependencies]
actix-rt = "2.9"
